# Integracao-Microsservices-RabbitMQ

./: .gitignore  README.md
todo_list/back/: Dockerfile  consumer.py  docker-compose.yml  pyproject.toml  requirements.txt
todo_list/back/app/: models.py  serializers.py  views.py
todo_list/back/app/migrations/: 0001_initial.py
todo_list/back/config/: celery.py  settings.py  urls.py
todo_list/back/todo_list/: tasks.py
todo_list/back/todo_list/migrations/: 0001_initial.py
todo_list/back/usuario/: admin.py  models.py
todo_list/back/usuario/migrations/: 0001_initial.py  0002_usuario_password_reset_token_created_and_more.py  0003_alter_usuario_username.py
todo_list/front/: package-lock.json  package.json
todo_list/front/src/: main.js
todo_list/front/src/api/: producer.js
todo_list/front/src/assets/: main.css
todo_list/front/src/components/: Add_Tasks.vue  Tasks.vue  tasks.vue
todo_list/front/src/plugins/: axios.js
todo_list/front/src/views/: HomeView.vue
users/back/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
users/back/config/: celery.py  settings.py  urls.py
users/back/todo_list/: models.py  serializers.py  views.py
users/back/todo_list/migrations/: 0001_initial.py
users/back/users/: admin.py  forms.py  models.py  serializers.py  tasks.py
users/back/users/migrations/: 0001_initial.py
users/front/: index.html  package-lock.json  package.json
users/front/src/: App.vue  main.js
users/front/src/api/: user.js
users/front/src/assets/: main.css
users/front/src/components/: Form.vue
users/front/src/plugins/: axios.js
users/front/src/stores/: user.js
users/front/src/views/: HomeView.vue
